<resources>
    <string name="app_name">Practica 6 David Borja</string>
    <string name="texto_principal">¿Qué edad tienes?</string>
    <string name="introduce_tu_edad">Introduce tu edad</string>
    <string name="calcular">Calcular</string>
    <string name="resulta_format">Si fueras un perro tendrías %d años.</string>
    <string name="texto_alerta">Debes introducir un valor numérico</string>
    <string name="volverAjustes">Volver</string>
    <string name="notificacionesAjustes">Notificaciones</string>
    <string name="modo_oscuroAjustes">Modo Oscuro</string>
    <string name="guardar_edadAjustes">Guardar Edad</string>
    <string name="edadAjustes">Edad</string>
    <string name="Ajustes">Guardar Nombre</string>
    <string name="nombreAjustes">Nombre</string>
    <string name="notificaciones_activadasAjustes">Notificaciones: Activadas</string>
    <string name="modo_oscuro_desactivadoAjustes">Modo Oscuro: Desactivado</string>
    <string name="nombre_no_establecidoAjustes">Nombre: No establecido</string>
    <string name="edad_no_establecidoAJustes">Edad: No establecido</string>
    <string name="usuario_appAjustes">Usuario App</string>
    <string name="cerrar_sesionAjustes">Cerrar Sesion</string>
    <string name="title_activity_launcher_activity.kt">LauncherActivity.kt</string>

    <!-- Token para MapBox -->
    <string name="mapbox_access_token">pk.eyJ1IjoiZGJvcmphbSIsImEiOiJjbWhjZHV4MmwxdDV5MnZwY21tcnd6ODQ2In0.ufUM5AGDpsf3BWuYRXjA3A</string>

    <string name="web_client">648965989758-rhoeppifmo32mtt79aelvogunmn740q3.apps.googleusercontent.com</string>

    <string name="Encabezado">Cuestionarios</string>
    <string name="tv_pregunta">"¿Qué valor de 'y' es solución de esta ecuación?"</string>
    <string name="bt_enviar">ENVIAR</string>
    <string name="toast_select_option">Selecciona una opción</string>
    <string name="tv_operacion">Operación</string>
    <string name="tv_equacion">Ecuación</string>
    <string name="opcion1">Opción 1</string>
    <string name="opcion2">Opción 2</string>
    <string name="encabezado2">Cuestionarios</string>
    <string name="tv_bienmal">Bien/Mal</string>
    <string name="bt_resultado">Continuar</string>
    <string name="resultado_correcto">Correcto</string>
    <string name="resultado_incorrecto">Incorrecto</string>
    <string name="resultado_siguiente">Siguiente</string>
    <string name="resultado_finusu">¡Felicidades! Has terminado la lección</string>
    <string name="resultado_acabado">Finalizar</string>
    <string name="resultado_reiniciar">Volver a empezar</string>

    <string name="titulo_app">Mi Calculadora</string>
    <string name="bienvenida">Bienvenidos a mi APP</string>
    <string name="seccion_calculadora">Calculadora</string>
    <string name="enunciado_num1">Introduzca el primer número</string>
    <string name="enunciado_num2">Introduzca el segundo número</string>
    <string name="hint_num1">Número 1</string>
    <string name="hint_num2">Número 2</string>
    <string name="btn_sumar">SUMAR</string>
    <string name="btn_restar">RESTAR</string>
    <string name="btn_multiplicar">MULTI</string>
    <string name="btn_dividir">DIVIDIR</string>
    <string name="resultado_texto">El resultado de la operación es</string>
    <string name="error_ambos_invalidos">Los números deben tener un valor válido</string>
    <string name="error_num1_invalido">El número 1 debe tener un valor válido</string>
    <string name="error_num2_invalido">El número 2 debe tener un valor válido</string>
    <string name="error_division_cero">No se puede dividir entre 0</string>

    <string name="tvRespuesta">Si fueras un perro tendrías %d años.</string>
    <string name="edad">Edad</string>
    <string name="vaciocanino">No puede estar vacio</string>
    <string name="volvertexto">Volver al menu</string>
    <string name="volvertextoheroe">Volver a guardar heroes</string>
</resources>
