<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="org.iesch.a03_menu_principal.preguntas.MainActivityResultado">

    <TextView
        android:id="@+id/encabezado2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#4CAF50"
        android:gravity="center"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/encabezado2"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_bienmal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:paddingTop="500px"
        android:paddingBottom="60px"
        android:text="@string/tv_bienmal"
        android:textSize="20sp" />

    <!-- Contenedor vertical para los dos botones -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/bt_resultado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="600px"
            android:background="#4CAF50"
            android:padding="12dp"
            android:text="@string/bt_resultado"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <Button
            android:id="@+id/bt_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20px"
            android:background="#4CAF50"
            android:padding="12dp"
            android:text="Volver al menu"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:visibility="invisible" />
    </LinearLayout>

</LinearLayout>



